--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
   db:
     image: postgres:17
-    ports:
-      - 5544:5432
+    container_name: pg
+    restart: unless-stopped
     env_file:
       - ./.env
+    ports:
+      - 5544:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-    restart: always
 
 volumes:
   pgdata:
